[gd_scene load_steps=6 format=3 uid="uid://ehu172nddrn6"]

[ext_resource type="Script" uid="uid://lkgyv3i1e1wj" path="res://scripts/ui/CustomerCard.gd" id="1_card"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pin"]
bg_color = Color(1, 1, 1, 0)
draw_center = false
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_difficulty"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 0)
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_broken_banner"]
bg_color = Color(0.545098, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_priority"]
bg_color = Color(1, 0.2, 0.2, 0.15)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.2, 0.2, 1)

[node name="CustomerCard" type="PanelContainer"]
custom_minimum_size = Vector2(300, 150)
offset_top = 47.0
offset_right = 300.0
offset_bottom = 197.0
script = ExtResource("1_card")

[node name="Pin" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pin")

[node name="PinCenter" type="Panel" parent="Pin"]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 18.0
offset_bottom = 18.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pin")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.164706, 0.121569, 0.101961, 1)
theme_override_font_sizes/font_size = 17
text = "Customer Name"

[node name="DifficultyRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DifficultyBadge" type="PanelContainer" parent="MarginContainer/VBoxContainer/DifficultyRow"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_difficulty")

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/DifficultyRow/DifficultyBadge"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="DifficultyLabel" type="Label" parent="MarginContainer/VBoxContainer/DifficultyRow/DifficultyBadge/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.35, 0.3, 1)
theme_override_font_sizes/font_size = 11
text = "EASY"

[node name="StarsLabel" type="Label" parent="MarginContainer/VBoxContainer/DifficultyRow/DifficultyBadge/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.35, 0.3, 1)
theme_override_font_sizes/font_size = 12
text = "‚óè‚óè‚óã‚óã‚óã"

[node name="MetaRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TimeContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MetaRow"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ClockIcon" type="Label" parent="MarginContainer/VBoxContainer/MetaRow/TimeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.35, 0.3, 1)
theme_override_font_sizes/font_size = 14
text = "üïê"

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer/MetaRow/TimeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.35, 0.3, 1)
theme_override_font_sizes/font_size = 14
text = "2:00 PM"

[node name="PaymentContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MetaRow"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="DollarIcon" type="Label" parent="MarginContainer/VBoxContainer/MetaRow/PaymentContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.176471, 0.501961, 0.0862745, 1)
theme_override_font_sizes/font_size = 14
text = "$"

[node name="PaymentLabel" type="Label" parent="MarginContainer/VBoxContainer/MetaRow/PaymentContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.176471, 0.501961, 0.0862745, 1)
theme_override_font_sizes/font_size = 14
text = "45"

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.25, 0.2, 1)
theme_override_font_sizes/font_size = 11
text = "Sweet elderly woman. Always brings cookies."
autowrap_mode = 3
max_lines_visible = 2

[node name="SignatureLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.4, 0.35, 1)
theme_override_font_sizes/font_size = 11
horizontal_alignment = 2

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.176471, 0.501961, 0.0862745, 1)
theme_override_font_sizes/font_size = 18
text = "ACCEPTED"
horizontal_alignment = 1

[node name="StatusBadge" type="Label" parent="."]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "‚úì"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WarningTriangle" type="Label" parent="."]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 0, 1)
theme_override_font_sizes/font_size = 20
text = "‚ñ≤"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BrokenBanner" type="Panel" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_broken_banner")

[node name="BannerLabel" type="Label" parent="BrokenBanner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "RELATIONSHIP BROKEN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PriorityStamp" type="Panel" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_priority")

[node name="StampLabel" type="Label" parent="PriorityStamp"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "PRIORITY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeartIcon" type="Label" parent="."]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "‚ô•"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
